<resources>

    <string name="app_name">ChangeAllVolumes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_volume_main">VolumeMainActivity</string>
    <string name="zerop">0%</string>
    <string name="hundredp">100%</string>
    <string name="stream_alarm">Alarm</string>
    <string name="stream_dtmf">DTMF Sound</string>
    <string name="stream_music">Music</string>
    <string name="stream_notification">Notification</string>
    <string name="stream_ring">Ring Tone</string>
    <string name="stream_system">System Sounds</string>
    <string name="stream_voice_call">Voice Call</string>

</resources>